feature(profile-settings): profile page settings [Finishes #168050003]
